--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Script link ini di gunakan untuk memunculkan logo pada tab website -->
         <link rel="stylesheet" type="image/jpg"  href="logo2.jpg">
+        <!--titel di gunakan sebagai judul konten pada tab website-->
         <title>Beranda</title>
+        <!--Script link ini di gunakan untuk mengkoneksikan antara file html dan css-->
         <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <!--Script button di gunakan untuk memilih membuka halaman Beranda,Riwayat Hidup & Pendidikan,dan Visi dan Misi-->
     <button class="button button1"><a href="index.html">Beranda</a></button>
     <button class="button button2"><a href="index2.html">Riwayat Hidup & Pendidikan</a></button>
     <button class="button button2"><a href="index3.html">Visi & Misi</a></button>
+<!--header adalah element merepresentasikan konten pengantar, pembukaan -->
 <header>
+  <!--Saya mengunakan tag h2 untuk judul di halam beranda saya-->
   <h2>Beranda</h2>
 </header>
-
+<!--Saya mengunakan tag section untuk mengelompokkan konten-->
 <section>
   <nav>
     <ul>
@@ -24,14 +30,17 @@
       <li><a href="index3.html">Visi & Misi</a></li>
     </ul>
   </nav>
-  
+  <!--saya mengunakan tag article untuk isi konten saya-->
   <article>
+    <!--Saya mengunakan tag h1 untuk judul konten saya-->
         <h1>Tentang Saya</h1>
-            <p>Hai! Perkenalkan nama saya <strong>Richard Charlos Fernando</strong>. Saya adalah mahasiswa di STIKOM PGRI Banyuwangi.
-            Desain Web atau yang dalam Bahasa Inggris disebut sebagai <em>Web Design</em>.Lahir pada tangal 06 APRIL 2002 Banyuwangi Jawa timur
+        <!--Saya mengunakan tag p untuk paragraft konten saya lalu saya menambahkan strong untuk memberikan cetak tebal atau Blood text, tag em untuk memberi penekanan tulisan yang ditandai dengan garis miring, tag u untuk memberikan garis bawah-->
+            <p>Hai! Perkenalkan nama saya <strong>Richard Charlos Fernando</strong>. Saya adalah mahasiswa di STIKOM PGRI Banyuwangi.Lahir pada tangal 06 APRIL 2002 Banyuwangi Jawa timur
             umur 19 tahun. Saya tingal di perumahan puri brawijaya permai block D-3.Mari kita belajar bersama. <strong><em><u>Semangat!</u></em></strong>
             </p>
+        <!--Saya mengunakan tag h1 untuk judul konten saya-->    
         <h1>Keahlian</h1>
+        <!--Saya mengunakan tag p untuk paragraft konten saya-->
         <p>
             Saya ahli dalam bermain games Apex legends saya pernah meraih rank Diamon 2 cukup susah di games Apex legend untuk meraih rank tersebut karena
             servernya yang tidak stabil dan citer atau hacker yang bisa membuat 1 server EA disconnect saya ber cita cita bekerja di perusahaan game EA dan membenarkan
@@ -39,7 +48,7 @@
         </p>
   </article>
 </section>
-
+<!-- Saya menambahkan footer untuk sebagai bawahan halaman website saya-->
 <footer>
   <p>Footer</p>    
 </footer>
