--- a/index2.html
+++ b/index2.html
@@ -4,18 +4,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Script link ini di gunakan untuk memunculkan logo pada tab website -->
         <link rel="stylesheet" type="image/jpg"  href="logo2.jpg">
+        <!--titel di gunakan sebagai judul konten  pada tab website-->
         <title>Riwayat Hidup & Pendidikan</title>
+        <!--Script link ini di gunakan untuk mengkoneksikan antara file html dan css-->
         <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <!--Script button di gunakan untuk memilih membuka halaman Beranda,Riwayat Hidup & Pendidikan,dan Visi dan Misi-->
     <button class="button button1"><a href="index.html">Beranda</a></button>
     <button class="button button2"><a href="index2.html">Riwayat Hidup & Pendidikan</a></button>
     <button class="button button2"><a href="index3.html">Visi & Misi</a></button>
+<!--header adalah element merepresentasikan konten pengantar, pembukaan -->
 <header>
+  <!--Saya mengunakan tag h2 untuk judul di halam beranda saya-->
   <h2>Riwayat Hidup & Pendidikan</h2>
 </header>
-
+<!--Saya mengunakan tag section untuk mengelompokkan konten-->
 <section>
   <nav>
     <ul>
@@ -24,13 +30,17 @@
       <li><a href="index3.html">Visi & Misi</a></li>
     </ul>
   </nav>
-  
+   <!--saya mengunakan tag article untuk isi konten saya-->
   <article>
+    <!--Saya mengunakan tag h1 untuk judul konten saya-->
         <h1>Riwayat Hidup</h1>
+        <!--Saya mengunakan tag p untuk paragraft konten saya-->
             <p>Saya  lahir pada tangal 06 APRIL 2002 Banyuwangi Jawa timur umur 19 tahun di rumah sakit bunda pukul 04.00 pagi.
                  Saya tingal di perumahan puri brawijaya permai block D-3.
             </p>
+         <!--Saya mengunakan tag h1 untuk judul konten saya-->    
         <h1>Riwayat Pendidikan</h1>
+        <!--Saya mengunakan tag p untuk paragraft konten saya, lalu menambahkan ol untuk mengurutkan,Fungsi li adalah untuk menampilkan item pada unordered dan ordered list.-->
         <p>
             <ol>
             <li>TK Santa Maria Banyuwangi</li>
@@ -42,7 +52,7 @@
         </p>
   </article>
 </section>
-
+<!-- Saya menambahkan footer untuk sebagai bawahan halaman website saya-->
 <footer>
     <p>Footer</p>
 </footer>
