--- a/index3.html
+++ b/index3.html
@@ -4,18 +4,23 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Script link ini di gunakan untuk memunculkan logo pada tab website -->
         <link rel="stylesheet" type="image/jpg"  href="logo2.jpg">
+        <!--titel di gunakan sebagai judul konten  pada tab website-->
         <title>Visi & Misi</title>
+        <!--Script link ini di gunakan untuk mengkoneksikan antara file html dan css-->
         <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <!--Script button di gunakan untuk memilih membuka halaman Beranda,Riwayat Hidup & Pendidikan,dan Visi dan Misi-->
     <button class="button button1"><a href="index.html">Beranda</a></button>
     <button class="button button2"><a href="index2.html">Riwayat Hidup & Pendidikan</a></button>
     <button class="button button2"><a href="index3.html">Visi & Misi</a></button>
 <header>
+  <!--Saya mengunakan tag h2 untuk judul di halam beranda saya-->
   <h2>Visi & Misi</h2>
 </header>
-
+<!--Saya mengunakan tag section untuk mengelompokkan konten-->
 <section>
   <nav>
     <ul>
@@ -24,11 +29,15 @@
       <li><a href="index3.html">Visi & Misi</a></li>
     </ul>
   </nav>
-  
+  <!--saya mengunakan tag article untuk isi konten saya-->
   <article>
-        <h1>Visi</h1>
+    <!--Saya mengunakan tag h1 untuk visi lalu tag strong memberikan cetak tebal -->
+        <h1><strong>Visi</strong></h1>
+            <!--tag p untuk membuat paragarf-->
             <p>Hidup mandiri untuk tidak membebani siapapun</p>
-        <h1>Misi</h1>
+        <!--Saya mengunakan tag h1 untuk Misi lalu tag strong memberikan cetak tebal -->
+        <h1><strong>Misi</strong></h1>
+        <!--Saya mengunakan p untuk membuat paragarf lalu menambahkan ol digunakan untuk membuat list dan li menampilkan data secara berurutan ke bawah-->
         <p>
             <ol>
             <li>Menjadi lulusan Stikom no 1</li>
@@ -36,7 +45,9 @@
             <li>Belajar untuk terus maju</li>
             </ol>
         </p>
-        <h1>Cita Cita</h1>
+        <!--Saya mengunakan tag h1 untuk Cita Cita lalu tag strong memberikan cetak tebal -->
+        <h1><strong>Cita-Cita</strong></h1>
+        <!--Saya mengunakan p untuk membuat paragarf lalu menambahkan ul digunakan untuk menunjukkan sebuah Unordered List atau Daftar Acak  dan li menampilkan data secara berurutan ke bawah-->
         <p>
             <ul>
                 <li>Ingin menajdi pro player Apex legend</li>
@@ -44,11 +55,13 @@
                 <li>Ingin jadi Dimas kanjeng biar bisa mengeluarkan uang dari katong doraemon</li>
             </ul>
         </p>
-        <h1>Moto</h1>
-        <P><strong>Hora umum Hora umum pokok yakinn</strong></P>
+        <!--Saya mengunakan tag h1 untuk Moto lalu tag strong memberikan cetak tebal -->
+        <h1><strong>Moto</strong></h1>
+        <!--tag p untuk membuat paragarf lalu di tambah dengan tag strong untuk memberikan cetak tebal pada tulisan -->
+        <P><strong>Hora umum Hora umum pokok yakin!!</strong></P>
   </article>
 </section>
-
+<!-- Saya menambahkan footer untuk sebagai bawahan halaman website saya-->
 <footer>
     <p>Footer</p>
 </footer>
