--- a/index2.html
+++ b/index2.html
@@ -34,13 +34,13 @@
   <article>
     <!--Saya mengunakan tag h1 untuk judul konten saya-->
         <h1>Riwayat Hidup</h1>
-        <!--Saya mengunakan tag p untuk paragraft konten saya-->
+        <!--Saya mengunakan tag p untuk paragraf konten saya-->
             <p>Saya  lahir pada tangal 06 APRIL 2002 Banyuwangi Jawa timur umur 19 tahun di rumah sakit bunda pukul 04.00 pagi.
                  Saya tingal di perumahan puri brawijaya permai block D-3.
             </p>
          <!--Saya mengunakan tag h1 untuk judul konten saya-->    
         <h1>Riwayat Pendidikan</h1>
-        <!--Saya mengunakan tag p untuk paragraft konten saya, lalu menambahkan ol untuk mengurutkan,Fungsi li adalah untuk menampilkan item pada unordered dan ordered list.-->
+        <!--Saya mengunakan tag p untuk paragraf konten saya, lalu menambahkan ol untuk mengurutkan,Fungsi li adalah untuk menampilkan item pada unordered dan ordered list.-->
         <p>
             <ol>
             <li>TK Santa Maria Banyuwangi</li>
