--- a/index3.html
+++ b/index3.html
@@ -31,12 +31,12 @@
   </nav>
   <!--saya mengunakan tag article untuk isi konten saya-->
   <article>
-    <!--Saya mengunakan tag h1 untuk visi lalu tag strong memberikan cetak tebal -->
-        <h1><strong>Visi</strong></h1>
+    <!--Saya mengunakan tag h1 untuk Visi-->
+        <h1>Visi</h1>
             <!--tag p untuk membuat paragarf-->
             <p>Hidup mandiri untuk tidak membebani siapapun</p>
-        <!--Saya mengunakan tag h1 untuk Misi lalu tag strong memberikan cetak tebal -->
-        <h1><strong>Misi</strong></h1>
+        <!--Saya mengunakan tag h1 untuk judul konten Misi-->
+        <h1>Misi</h1>
         <!--Saya mengunakan p untuk membuat paragarf lalu menambahkan ol digunakan untuk membuat list dan li menampilkan data secara berurutan ke bawah-->
         <p>
             <ol>
@@ -45,8 +45,8 @@
             <li>Belajar untuk terus maju</li>
             </ol>
         </p>
-        <!--Saya mengunakan tag h1 untuk Cita Cita lalu tag strong memberikan cetak tebal -->
-        <h1><strong>Cita-Cita</strong></h1>
+        <!--Saya mengunakan tag h1 untuk judul konten Cita Cita-->
+        <h1>Cita-Cita</h1>
         <!--Saya mengunakan p untuk membuat paragarf lalu menambahkan ul digunakan untuk menunjukkan sebuah Unordered List atau Daftar Acak  dan li menampilkan data secara berurutan ke bawah-->
         <p>
             <ul>
@@ -55,8 +55,8 @@
                 <li>Ingin jadi Dimas kanjeng biar bisa mengeluarkan uang dari katong doraemon</li>
             </ul>
         </p>
-        <!--Saya mengunakan tag h1 untuk Moto lalu tag strong memberikan cetak tebal -->
-        <h1><strong>Moto</strong></h1>
+        <!--Saya mengunakan tag h1 untuk judul konten Moto-->
+        <h1>Moto</h1>
         <!--tag p untuk membuat paragarf lalu di tambah dengan tag strong untuk memberikan cetak tebal pada tulisan -->
         <P><strong>Hora umum Hora umum pokok yakin!!</strong></P>
   </article>
