--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   </nav>
   <!--saya mengunakan tag article untuk isi konten saya-->
   <article>
-    <!--Saya mengunakan tag h1 untuk judul konten saya-->
+    <!--Saya mengunakan tag h1 untuk judul konten Tentang saya-->
         <h1>Tentang Saya</h1>
         <!--Saya mengunakan tag p untuk paragraf konten saya lalu saya menambahkan strong untuk memberikan cetak tebal atau Blood text, tag em untuk memberi penekanan tulisan yang ditandai dengan garis miring, tag u untuk memberikan garis bawah-->
             <p>Hai! Perkenalkan nama saya <strong>Richard Charlos Fernando</strong>. Saya adalah mahasiswa di STIKOM PGRI Banyuwangi.Lahir pada tangal 06 APRIL 2002 Banyuwangi Jawa timur
             umur 19 tahun. Saya tingal di perumahan puri brawijaya permai block D-3.Mari kita belajar bersama. <strong><em><u>Semangat!</u></em></strong>
             </p>
-        <!--Saya mengunakan tag h1 untuk judul konten saya-->    
+        <!--Saya mengunakan tag h1 untuk judul konten Keahian-->    
         <h1>Keahlian</h1>
-        <!--Saya mengunakan tag p untuk paragraf konten saya-->
+        <!--Saya mengunakan tag p untuk paragraf konten Keahlian-->
         <p>
             Saya ahli dalam bermain games Apex legends saya pernah meraih rank Diamon 2 cukup susah di games Apex legend untuk meraih rank tersebut karena
             servernya yang tidak stabil dan citer atau hacker yang bisa membuat 1 server EA disconnect saya ber cita cita bekerja di perusahaan game EA dan membenarkan
